--- a/package.json
+++ b/package.json
@@ -50,5 +50,12 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "!src/index.tsx",
+      "!src/setupTests.ts",
+      "!src/reportWebVitals.ts"
+    ]
   }
 }
