--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "jwt-decode": "^3.1.2",
+    "msw": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -54,7 +55,10 @@
   },
   "jest": {
     "collectCoverageFrom": [
+      "src/**/*.ts",
+      "src/**/*.tsx",
       "!src/index.tsx",
+      "!src/react-app-env.d.ts",
       "!src/setupTests.ts",
       "!src/reportWebVitals.ts"
     ]
